# SBOMCtl

./: .gitignore  .gitmodules  README.md  pyproject.toml
privateSBOMExchange/: .gitignore  Makefile  README.md  bootstrap.sh  pyproject.toml  requirements.txt  runserver.sh  test.py
privateSBOMExchange/Evaluation/: README.md  plot_perf_size_AES.py  plot_performance.py  preprocess_sboms.py  test_evaluations.py  test_evaluations_AES.py
privateSBOMExchange/config/: attribute-group-namespace.conf  attribute-namespace.conf  bom-only.conf  config.ini  group.conf  ip-policy.conf  kms.conf  kms_and_attribute-namespace.conf  log4j-membership-policy.conf  petra.conf.template  policy.conf  test-AES.conf  tiny.conf  weakness-policy.conf
privateSBOMExchange/evaluation/: README.md  intellectual_property_policy  plot_perf_size_AES.py  test_evaluations.py  test_evaluations_AES.py  weaknesses_policy
privateSBOMExchange/evaluation_tmp/: plot_perf_size.py  preprocess_sboms.py
privateSBOMExchange/policies/: AES_policy  intellectual_property_policy  log4j-policy  name_policy  name_policy.yml  weaknesses_policy
privateSBOMExchange/scripts/: Redaction.py
privateSBOMExchange/src/: script.py
privateSBOMExchange/src/cmd/: client.py  redactor.py
privateSBOMExchange/src/cpabe/: Cargo.toml  pyproject.toml  (+1 more)
privateSBOMExchange/tests/: plot_perf_size_AES.py  plot_performance.py  preprocess_sboms.py  test_AES.py  test_ac17_cpabe.py  test_commitment.py  test_cpabe.py  test_cpabe_AES.py  test_crypto.py  test_evaluations.py  test_evaluations_AES.py  test_kms.py  test_membership.py  test_models.py  test_package_membership.py  test_tree_serialization.py
(+55 files in other folders)
