[project]
name = "Private SBOM Exchange"
version = "0.0.1"
authors = [
  { name="Eman Abu Ishgair", email="eabuishg@purdue.edu" },
]
description = "Package to redact SBOM"
readme = "README.md"
requires-python = ">="
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""