[package]
name = "cpabe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cpabe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
rabe = "0.4.0"
rayon = "1.10.0"
serde_json = "1.0.132"
zerocopy = "0.8.9"
